# orderbeamer

./: CMakeLists.txt  README.md  pyproject.toml
client/: client.py
engine/: engine.cpp  statics.h
gateway/: gateway.h
generics/: Error.h  FD.h
memory/: Allocator.h  Buffer.h  OrderArena.h  PriceLevelArena.h  Vector.h
tests/: README.md  bench.cpp  e2e_client.py  run_e2e.sh  stress.cpp
